boulder/tests/error/function/missing_semi.bo
# Expected
# SemiColon
# found `a`
# (8:

fn semi(a: u32) -> u32 {
    a + 3
    a
}